# Nano33Ahrs2Joystick

./: .gitignore  MadgwickFusionAdvanced.ino  MadgwickFusionAdvancedJoystick.ino  MyVector.cpp  MyVector.h  README.md  compile_commands.json  parse_bytes.cpp  serial_commands.h
MadgwickFusionAdvancedJoystick/src/: kv_storage.h  serial_comms.cpp
MadgwickFusionAdvancedJoystick/src/USBJoystick/: Joystick.cpp  USBCommsJoystick.cpp
main/: compile_commands.json  main.ino  sketch.yaml
main/src/: ino_globals.h  kv_storage.cpp  kv_storage.h  serial_comms.cpp  serial_comms.h  serial_utils.cpp  serial_utils.h  utils.cpp  utils.h
main/src/USBJoystick/: USBCommsJoystick.cpp  USBCommsJoystick.h
src/: comms.cpp  comms.h  ino_globals.h  kv_storage.cpp  kv_storage.h  serial_comms.cpp  serial_comms.h  string_helpers.cpp  string_helpers.h  utils.cpp  utils.h
src/Fusion/: FusionAxes.h  FusionMath.h  FusionOffset.c
src/MyVector/: MyVector.cpp  MyVector.h
src/USBJoystick/: Joystick.cpp  Joystick.h  USBCommsJoystick.cpp  USBCommsJoystick.h  USBJoystick.cpp  USBJoystick.h
src/tests/: CMakeLists.txt  test_utils.cpp  test_utils.h  tests.cpp
test/: CMakeLists.txt  arduino_compat.cpp  arduino_compat.h  test_serial_utils.cpp  test_serial_utils.h  test_utils.cpp  test_utils.h
test_MadgwickFusionAdvancedJoystick/: CMakeLists.txt  test_utils.cpp  tests.cpp
